# programming-bitcoin-rs

./: Cargo.toml  README.md
notes/: ch01_finite_field.md  ch02_elliptic_curves.md  ch03_elliptic_curve_cryptography.md  ch04_serialization.md  ch05_transactions.md
src/: ecc.rs  elliptic_curve.rs  elliptic_curve_point.rs  field.rs  finite_field.rs  finite_field_element.rs  lib.rs  script.rs  secp256k1.rs  transactions.rs  utils.rs
src/ecc/: curve.rs  element.rs  finite_field.rs  point.rs  private_key.rs  secp256k1_params.rs  signature.rs
src/elliptic_curve/: curve.rs  element.rs  finite_field.rs  point.rs  private_key.rs  signature.rs
src/script/: op.rs  script.rs
src/secp256k1/: curve.rs  finite_field.rs  point.rs  signature.rs
src/transactions/: input.rs  output.rs  tx.rs
src/utils/: biguint_primality_checker.rs  calculate_fee.rs  encode_base58.rs  hash160.rs  hash256.rs  tx_fetcher.rs  varint.rs
