[package]
name = "programming-bitcoin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "programming_bitcoin"

[dependencies]
hex = "0.4.3"
num = "0.4.0"
num-bigint = { version ="0.4.3", features = ["rand"] }
rand = "0.8.5"
reqwest = {version= "0.11.16", features = ["blocking"]}
rfc6979 = "0.4.0"
ripemd = "0.1.3"
serde_json = "1.0.95"
sha1 = "0.10.5"
sha2 = "0.10.6"
